--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <body>
     <header class="header">
       <a href="#">
-        <img class="logo" alt="TM logo" src="img/tm-logo.png" />
+        <img class="logo" alt="TM logo" src="img/TrevDevLogoDark.png" />
       </a>
 
       <nav class="main-nav">
@@ -70,7 +70,7 @@
       <section class="section-hero">
         <div class="hero">
           <div class="hero-text-box">
-            <h1 class="heading-primary">Hello all, my name is Trevor McGirr</h1>
+            <h1 class="heading-primary">Hello all, </br>my name is </br>Trevor McGirr</h1>
             <p class="hero-description">
               You have stumbled upon my personal design website.<br />
               Feel free to look around.
@@ -710,7 +710,7 @@
       <div class="container grid grid--footer">
         <div class="logo-col">
           <a href="#" class="footer-logo">
-            <img class="logo" alt="TM designs logo" src="img/tm-logo.png" />
+            <img class="logo" alt="TrevDev logo" src="img/TrevDevLogoLight.png" />
           </a>
 
           <ul class="social-links">
