--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="description" content="Personal website for Trevor McGirr" />
+    <meta name="description" content="Personal Web Development site for Trevor McGirr" />
 
     <!-- Always include this line of code!!! -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -79,28 +79,14 @@
 
             <a href="#about" class="btn btn--outline">About &darr;</a>
 
-            <!-- Add?? -->
-            <!-- <div class="delivered-projects">
-              <div class="delivered-imgs">
-                <img src="img/customers/customer-1.jpg" alt="Customer photo" />
-                <img src="img/customers/customer-2.jpg" alt="Customer photo" />
-                <img src="img/customers/customer-3.jpg" alt="Customer photo" />
-                <img src="img/customers/customer-4.jpg" alt="Customer photo" />
-                <img src="img/customers/customer-5.jpg" alt="Customer photo" />
-                <img src="img/customers/customer-6.jpg" alt="Customer photo" />
-              </div>
-              <p class="delivered-text"><span>1000+</span> hours studying!</p>
-            </div> -->
           </div>
           <div class="hero-img-box">
             <picture>
-              <!-- <source srcset="img/hero.webp" type="image/webp" /> -->
               <source srcset="img/portrait.png" type="image/png" />
-
               <img
                 src="img/portrait.png"
                 class="hero-img"
-                alt="Picture of Trevor"
+                alt="Picture of Trevor McGirr"
               />
             </picture>
           </div>
@@ -125,7 +111,6 @@
       <section class="section-about" id="about">
         <div class="container">
           <span class="subheading">About</span>
-          <!-- <h2 class="heading-secondary">My Bio</h2> -->
         </div>
 
         <!-- Bio  -->
@@ -142,7 +127,6 @@
             <br />
             <br />I've continued to advance my knowledge in HTML, CSS,
             JavaScript and Node through various courses.
-
             <br />
             <br />Here are a few of the skills I've attained so far:
           </p>
@@ -166,8 +150,7 @@
               src="img/laptop-img.png"
               class="step-img"
               data-aos="zoom-in"
-              alt="iPhone app
-              preferences selection screen"
+              alt="Laptop Graphic"
             />
           </div>
 
@@ -177,11 +160,8 @@
               src="img/laptop-img.png"
               class="step-img"
               data-aos="zoom-in"
-              alt="iPhone app
-            projects approving plan screen"
+              alt="Laptop Graphic"
             />
-            <!-- <button class="demo-btn" onclick="location.href='https://omnifood-trevor.netlify.app'"
-            target="_blank">Try Me</button> -->
           </div>
 
           <div class="step-text-box">
@@ -208,8 +188,7 @@
               src="img/laptop-img.png"
               class="step-img"
               data-aos="zoom-in"
-              alt="iPhone app
-            delivery screen"
+              alt="Laptop Graphic"
             />
           </div>
         </div>
@@ -348,10 +327,8 @@
           </div>
         </div>
 
-        <div class="container all-projects">
-          <a href="https://github.com/tmcgirr" target="_blank" class="link"
-            >See my github projects &rarr;</a
-          >
+        <div  class="container all-projects">
+          <a class="link" onclick="window.open('https://github.com/tmcgirr')">See my github projects &rarr;</a>
         </div>
       </section>
 
@@ -364,7 +341,7 @@
             <figure class="testimonial">
               <img
                 class="testimonial-img"
-                alt="Photo of customer Dave Bryson"
+                alt="Sample Photo of customer Dave Bryson"
                 src="img/customers/dave.jpg"
               />
               <blockquote class="testimonial-text">
@@ -377,7 +354,7 @@
             <figure class="testimonial">
               <img
                 class="testimonial-img"
-                alt="Photo of customer Ben Hadley"
+                alt="Sample Photo of customer Ben Hadley"
                 src="img/customers/ben.jpg"
               />
               <blockquote class="testimonial-text">
@@ -391,7 +368,7 @@
             <figure class="testimonial">
               <img
                 class="testimonial-img"
-                alt="Photo of customer Steve Miller"
+                alt="Sample Photo of customer Steve Miller"
                 src="img/customers/steve.jpg"
               />
               <blockquote class="testimonial-text">
@@ -405,7 +382,7 @@
             <figure class="testimonial">
               <img
                 class="testimonial-img"
-                alt="Photo of customer Hannah Smith"
+                alt="Sample Photo of customer Hannah Smith"
                 src="img/customers/hannah.jpg"
               />
               <blockquote class="testimonial-text">
@@ -421,86 +398,73 @@
           <figure class="gallery-item">
             <img
               src="img/gallery/img1.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of computer"
             />
-            <!-- <figcaption>Caption</figcaption> -->
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/img2.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of computer"
             />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/img3.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of ipad"
             />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/img4.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of computer"
             />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/img5.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of computer"
             />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/img6.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of laptop"
             />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/img7.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of laptop"
             />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/img8.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of website"
             />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/img9.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of laptop"
             />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/img10.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of keyboard"
             />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/img11.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of computer"
             />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/img12.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of laptop"
             />
           </figure>
         </div>
@@ -518,7 +482,7 @@
           <div class="pricing-plan pricing-plan--starter">
             <header class="plan-header">
               <p class="plan-name">Starter</p>
-              <p class="plan-price"><span>$</span>000</p>
+              <p class="plan-price"><span>$</span>Ask</p>
               <p class="plan-text">(One-Time Purchase)</p>
             </header>
             <ul class="list">
@@ -547,7 +511,7 @@
           <div class="pricing-plan pricing-plan--complete">
             <header class="plan-header">
               <p class="plan-name">Complete</p>
-              <p class="plan-price"><span>$</span>000</p>
+              <p class="plan-price"><span>$</span>Ask</p>
               <p class="plan-text">(One-year of service)</p>
             </header>
             <ul class="list">
@@ -592,7 +556,7 @@
           </div>
           <div class="feature">
             <ion-icon class="feature-icon" name="ribbon-outline"></ion-icon>
-            <p class="feature-title">Modern and Sleek</p>
+            <p class="feature-title">Modern &amp; Sleek</p>
             <p class="feature-text">
               Websites that use modern and responsive designs.
             </p>
@@ -751,7 +715,7 @@
         </div>
 
         <nav class="nav-col">
-          <p class="footer-heading">Account</p>
+          <p class="footer-heading">Account (Sample)</p>
           <ul class="footer-nav">
             <li><a class="footer-link" href="#">Create account</a></li>
             <li><a class="footer-link" href="#">Sign in</a></li>
@@ -761,7 +725,7 @@
         </nav>
 
         <nav class="nav-col">
-          <p class="footer-heading">Company</p>
+          <p class="footer-heading">Company (Sample)</p>
           <ul class="footer-nav">
             <li><a class="footer-link" href="#">About Me</a></li>
             <li><a class="footer-link" href="#">For Business</a></li>
@@ -771,7 +735,7 @@
         </nav>
 
         <nav class="nav-col">
-          <p class="footer-heading">Resources</p>
+          <p class="footer-heading">Resources (Sample)</p>
           <ul class="footer-nav">
             <li><a class="footer-link" href="#">Project directory </a></li>
             <li><a class="footer-link" href="#">Help center</a></li>
