--- a/index.html
+++ b/index.html
@@ -201,7 +201,15 @@
         </div>
 
         <div class="container grid grid--3-cols margin-bottom-md">
-          <div
+         
+         <!-- Project 1 -->
+          <div class="project-div" >
+
+            <div class="banner">
+              <div class="banner-text">Click to view!</div>
+            </div>
+
+            <div
             class="projects"
             onclick="window.open('https://forkify-trevor.netlify.app')"
           >
@@ -242,6 +250,13 @@
               </ul>
             </div>
           </div>
+          </div>
+
+          <div  class="project-div">
+
+            <div class="banner">
+              <div class="banner-text">Click to view!</div>
+            </div>
 
           <div
             class="projects"
@@ -283,6 +298,7 @@
               </ul>
             </div>
           </div>
+        </div>
 
           <div class="diets">
             <h3 class="heading-tertiary">Project features:</h3>
