--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
               </li>
             </ul>
             <div class="plan-sing-up">
-              <a href="#" class="btn btn--full">Select</a>
+              <a href="#cta" class="btn btn--full">Select</a>
             </div>
           </div>
 
@@ -549,7 +549,7 @@
               </li>
             </ul>
             <div class="plan-sing-up">
-              <a href="#" class="btn btn--full">Select</a>
+              <a href="#cta" class="btn btn--full">Select</a>
             </div>
           </div>
         </div>
