--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                 <span>NO Domain</span>
               </li>
             </ul>
-            <div class="plan-sing-up">
+            <div class="plan-sign-up">
               <a href="#cta" class="btn btn--full">Select</a>
             </div>
           </div>
@@ -548,7 +548,7 @@
                 <span>Domain Included</span>
               </li>
             </ul>
-            <div class="plan-sing-up">
+            <div class="plan-sign-up">
               <a href="#cta" class="btn btn--full">Select</a>
             </div>
           </div>
