--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
             <div class="cta-text-box">
               <h2 class="heading-secondary">Get your website started today!</h2>
               <p class="cta-text">
-                Companies that have a website a more likely to increase their
+                Companies that have a website are more likely to increase their
                 profits! Start promoting your business today!
               </p>
 
